# care-loop

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
server/: Dockerfile  pyproject.toml
server/app/: config.py  db.py  logging_setup.py  main.py  metrics.py  middleware.py  models.py  schemas.py  seed.py  triage.py
server/app/routers/: careteam.py  checkins.py  enrollment.py  health.py
server/tests/: conftest.py  test_enrollment_funnel.py  test_triage.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.vue  api.test.ts  api.ts  router.ts  style.css  types.ts
web/src/lib/: checkin.test.ts  checkin.ts
web/src/views/: CareView.vue  CheckInView.vue  EnrollView.vue  HomeView.vue
