[project]
name = "careloop-server"
version = "0.1.0"
description = "CareLoop API — member enrollment, symptom check-ins, and human-in-the-loop triage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.92",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
# B008: `Depends(...)` in argument defaults is the FastAPI dependency-injection idiom
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
